miniarm-rk3288_defconfig: enable CONFIG_RK_VCODEC
enable CONFIG_RK_VCODEC and fix build fail

Change-Id: Ia2e521462e15994c63d1cc53b81670818bc231cc

--- a/arch/arm/configs/miniarm-rk3288_defconfig
+++ b/arch/arm/configs/miniarm-rk3288_defconfig
@@ -16,6 +16,7 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
+CONFIG_RK_VCODEC=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
@@ -238,7 +239,7 @@ CONFIG_SPI_SPIDEV=y
 CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
-CONFIG_DYNAMIC_DEBUG=y
+#CONFIG_DYNAMIC_DEBUG=y
 CONFIG_BATTERY_SBS=y
 CONFIG_CHARGER_GPIO=y
 CONFIG_CHARGER_BQ24735=y
