--- a/arch/arm/boot/dts/rk3288-miniarm.dts
+++ b/arch/arm/boot/dts/rk3288-miniarm.dts
@@ -507,8 +507,24 @@
        status = "okay";
 };
 
+
 &spi2 {
         status = "okay";
+        max-freq = <50000000>;
+        spidev@0 {
+                 compatible = "rockchip,spi_tinker";
+                 reg = <0>;
+                 spi-max-frequency = <50000000>;
+                 spi-cpha = <1>;
+                 //spi-cpol = <1>;
+        };
+        spidev@1 {
+                 compatible = "rockchip,spi_tinker";
+                 reg = <1>;
+                 spi-max-frequency = <50000000>;
+                 spi-cpha = <1>;
+                 //spi-cpol = <1>;
+        };
 };
 
 &i2s {
