Modify the number of led gpio for pwr-led, act-led and cpu0-led and enable some CONFIG_LED_TRIGGER for led display functions
Change-Id: I23592ca1c240d800519c53c72a670bdfd1b23053
Signed-off-by: yi-hsin_hung <yi-hsin_hung@asus.com>

--- a/arch/arm/boot/dts/rk3288-miniarm.dts
+++ b/arch/arm/boot/dts/rk3288-miniarm.dts
@@ -138,14 +138,19 @@
 		compatible = "gpio-leds";
 
 		pwr-led {
-			gpios = <&gpio2 2 GPIO_ACTIVE_HIGH>;
+			gpios = <&gpio0 3 GPIO_ACTIVE_HIGH>;
 			linux,default-trigger = "default-on";
 		};
 
-		act-led {
-			gpios=<&gpio2 3 GPIO_ACTIVE_LOW>;
-			linux,default-trigger="mmc0";
-		};
+                act-led {
+                        gpios=<&gpio1 24 GPIO_ACTIVE_LOW>;
+                        linux,default-trigger="mmc0";
+                };
+
+                cpu0-led {
+                        gpios=<&gpio1 25 GPIO_ACTIVE_LOW>;
+                        linux,default-trigger="cpu0";
+                };
 	};
 
 	sound {
