--- a/arch/arm/boot/dts/rk3288-miniarm.dts
+++ b/arch/arm/boot/dts/rk3288-miniarm.dts
@@ -769,7 +769,7 @@
 };
 
 &dmc {
-	status = "okay";
+	status = "disabled";
 	logic-supply = <&vdd_log>;
 	rockchip,odt-disable-freq = <666000000>;
 	rockchip,dll-disable-freq = <333000000>;
