Enable NTFS kernel config for NTFS file system.
Change-Id: Id49850acf994eb0693a5d67f3c21229d43b04b4c
Signed-off-by: yi-hsin_hung <yi-hsin_hung@asus.com>

--- a/arch/arm/configs/miniarm-rk3288_defconfig
+++ b/arch/arm/configs/miniarm-rk3288_defconfig
@@ -432,6 +432,9 @@ CONFIG_XFS_POSIX_ACL=y
 CONFIG_XFS_RT=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_DEBUG=y
+CONFIG_NTFS_RW=y
 CONFIG_ECRYPT_FS=y
 CONFIG_HFSPLUS_FS=y
 CONFIG_SQUASHFS=y
