Modify the behaviors of green led and orange led
Green Led:
    Reference: mmc0
    Default: off
    Read/write: flashing
Oragne Led:
    Default: off

Change-Id: I428bf7b93bffc1a2aaae2c553a17be3eebd19a5f
Signed-off-by: yi-hsin_hung <yi-hsin_hung@asus.com>

--- a/arch/arm/boot/dts/rk3288-miniarm.dts
+++ b/arch/arm/boot/dts/rk3288-miniarm.dts
@@ -143,13 +143,13 @@
 		};
 
                 act-led {
-                        gpios=<&gpio1 24 GPIO_ACTIVE_LOW>;
+                        gpios=<&gpio1 24 GPIO_ACTIVE_HIGH>;
                         linux,default-trigger="mmc0";
                 };
 
-                cpu0-led {
-                        gpios=<&gpio1 25 GPIO_ACTIVE_LOW>;
-                        linux,default-trigger="cpu0";
+                led1-led {
+                        gpios=<&gpio1 25 GPIO_ACTIVE_HIGH>;
+                        linux,default-trigger="default-off";
                 };
 	};
 
