Enable the related of NFS config for nfs functions
Change-Id: Id699c8674c05b5ef575a934431e9e7b13de9f1c6
Signed-off-by: yi-hsin_hung <yi-hsin_hung@asus.com>

--- a/arch/arm/configs/miniarm-rk3288_defconfig
+++ b/arch/arm/configs/miniarm-rk3288_defconfig
@@ -621,7 +621,11 @@ CONFIG_ROCKCHIP_EFUSE=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
-# CONFIG_DNOTIFY is not set
+CONFIG_DNOTIFY=y
+CONFIG_FANOTIFY=y
+CONFIG_DNS_RESOLVER=y
+CONFIG_RPCSEC_GSS_KRB5=y
+CONFIG_USB_USBNET=y
 CONFIG_FUSE_FS=y
 CONFIG_ISO9660_FS=y
 CONFIG_JOLIET=y
