hdmi: change vop0 clk source to npll
To support more hdmi resolution we need a clk source
which can modulate to any target clk whick can
meet hdmi resolution that user set.

Change-Id: I47a2da3629bcd018dfc6c70d5f21707cca0c5e8f

--- a/arch/arm/boot/dts/rk3288.dtsi
+++ b/arch/arm/boot/dts/rk3288.dtsi
@@ -936,7 +936,7 @@
                                   <&cru PCLK_PERI>;
 		assigned-clock-rates = <0>, <0>,
 				       <594000000>, <400000000>,
-				       <500000000>, <300000000>,
+				       <0>, <300000000>,
 				       <150000000>, <75000000>,
 				       <300000000>, <150000000>,
 				       <75000000>;
@@ -997,6 +997,8 @@
 		resets = <&cru SRST_LCDC0_AXI>, <&cru SRST_LCDC0_AHB>, <&cru SRST_LCDC0_DCLK>;
 		reset-names = "axi", "ahb", "dclk";
 		iommus = <&vopb_mmu>;
+		assigned-clocks = <&cru DCLK_VOP0>;
+		assigned-clock-parents = <&cru PLL_NPLL>;
 		status = "disabled";
 
 		vopb_out: port {
