Enable Apple iPhone USB Ethernet driver for the functions of iphone usb tethering
Change-Id: Ic2a76036c63332e53e6e5c7c5178b43760171fbe
Signed-off-by: yi-hsin_hung <yi-hsin_hung@asus.com>

--- a/arch/arm/configs/miniarm-rk3288_defconfig
+++ b/arch/arm/configs/miniarm-rk3288_defconfig
@@ -383,6 +383,7 @@ CONFIG_USB_NET_DM9601=y
 CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
 CONFIG_USB_NET_MCS7830=y
+CONFIG_USB_IPHETH=y
 # CONFIG_USB_NET_CDC_SUBSET is not set
 # CONFIG_USB_NET_ZAURUS is not set
 CONFIG_LIBERTAS_THINFIRM=y
