Enable Multiple devices driver and RAID driver for RAID disk functions
Change-Id: Ib74abb961523f9c268c1c282069d32df6fc6617b
Signed-off-by: yi-hsin_hung <yi-hsin_hung@asus.com>

--- a/arch/arm/configs/miniarm-rk3288_defconfig
+++ b/arch/arm/configs/miniarm-rk3288_defconfig
@@ -365,6 +365,15 @@ CONFIG_BLK_DEV_SR=y
 CONFIG_SCSI_SPI_ATTRS=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
+CONFIG_BLK_DEV_MD=y
+CONFIG_MD_AUTODETECT=y
+CONFIG_MD_LINEAR=y
+CONFIG_MD_RAID0=y
+CONFIG_MD_RAID1=y
+CONFIG_MD_RAID10=y
+CONFIG_MD_RAID456=y
+CONFIG_MD_MULTIPATH=y
+CONFIG_MD_FAULTY=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_THIN_PROVISIONING=y
 CONFIG_DM_VERITY=y
