--- a/arch/arm/configs/miniarm-rk3288_defconfig
+++ b/arch/arm/configs/miniarm-rk3288_defconfig
@@ -539,6 +539,7 @@ CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_CHERRY=y
+CONFIG_HID_CHICONY=y
 CONFIG_HID_KENSINGTON=y
 CONFIG_HID_LOGITECH=y
 CONFIG_HID_LOGITECH_DJ=y
