Enable the dts of PCM5122 for Pi-DAC+ and Pi-AMP+
Change-Id: I65a4117238cab79b6fee2297098f63277ed9ea29
Signed-off-by: yi-hsin_hung <yi-hsin_hung@asus.com>

--- a/arch/arm/boot/dts/rk3288-miniarm.dts
+++ b/arch/arm/boot/dts/rk3288-miniarm.dts
@@ -498,6 +498,13 @@
 
 &i2c1 {
         status = "okay";
+
+	pcm5122: pcm5122@4c {
+		#sound-dai-cells = <0>;
+		compatible = "ti,pcm5122";
+		reg = <0x4c>;
+		status = "disabled";
+	};
 };
 
 &i2c3 {
