--- a/arch/arm/configs/miniarm-rk3288_defconfig
+++ b/arch/arm/configs/miniarm-rk3288_defconfig
@@ -371,6 +371,7 @@ CONFIG_OF_MDIO=y
 CONFIG_OF_RESERVED_MEM=y
 CONFIG_OF_RESOLVE=y
 CONFIG_OF_OVERLAY=y
+CONFIG_OF_CONFIGFS=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=y
