Remove pcm5122 dts config and modify the symbol of sound to sound-simple-cards for dts overlay arch.
Change-Id: Ic129f156b795334785adb17e70d041527a2b8595
Signed-off-by: yi-hsin_hung <yi-hsin_hung@asus.com>

--- a/arch/arm/boot/dts/rk3288-miniarm.dts
+++ b/arch/arm/boot/dts/rk3288-miniarm.dts
@@ -153,7 +153,7 @@
                 };
 	};
 
-	sound {
+	sound-simple-card {
 		compatible = "simple-audio-card";
 		simple-audio-card,format = "i2s";
 		simple-audio-card,name = "rockchip,miniarm-codec";
@@ -498,13 +498,6 @@
 
 &i2c1 {
         status = "okay";
-
-	pcm5122: pcm5122@4c {
-		#sound-dai-cells = <0>;
-		compatible = "ti,pcm5122";
-		reg = <0x4c>;
-		status = "disabled";
-	};
 };
 
 &i2c3 {
